<resources>
    <string name="app_name">NPS System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_incident">Incident</string>
    <string name="menu_team_incident">Team Incident</string>
    <string name="menu_atm">ATM</string>
    <string name="menu_contract">Contract</string>
    <string name="menu_mail">Mail</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_reference">Reference</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_system_log">System Log</string>
    <string name="menu_about">About</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="menu_genaral">GENARAL</string>
    <string name="menu_personal">PERSONAL</string>
    <string name="menu_system">SYSTEM</string>

    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- Start login value  -->
    <string name="hint_user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_server">Server</string>
    <string name="hint_port">Port</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">FORGET PASSWORD</string>
    <!-- End login value   -->

    <!-- Start incident value  -->
    <string name="hint_date_from">Date from</string>
    <string name="hint_date_to">Date to</string>

    <!-- End incident value   -->
    <string name="key_map">AIzaSyDV6_NUAC57Ui_dTpmoRFHT_ovXJsDJ42U</string>

    <string name="valid_server_name">Enter a valid server name</string>
    <string name="valid_user_name">Enter a valid user name</string>
    <string name="valid_password">Enter a valid password</string>
    <string name="valid_port">Enter a valid port</string>

    <!--    string error-->
    <string name="connect_fail">Can not connect to server</string>
    <string name="version">v1.0</string>


    <!-- begin string atm fragment-->
    <string name="txt_search">SerialNo, address...</string>

    <!-- end string atm fragment-->

</resources>
