<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_genaral"
            android:title="@string/menu_genaral" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_incident"
            android:icon="?android:attr/alertDialogIcon"
            android:title="@string/menu_incident" />
        <item
            android:id="@+id/nav_team_incident"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_team_incident" />
        <item
            android:id="@+id/nav_atm"
            android:icon="@drawable/ic_atm"
            android:title="@string/menu_atm" />
        <item
            android:id="@+id/nav_contract"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_contract" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_two"
            android:enabled="false"
            android:title="@string/menu_personal" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/menu_mail" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_refernence"
            android:icon="@drawable/ic_reference"
            android:title="@string/menu_reference" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_system"
            android:enabled="false"
            android:title="@string/menu_system" />
        <item
            android:id="@+id/nav_item_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_item_system_log"
            android:icon="@drawable/ic_log"
            android:title="@string/menu_system_log" />
        <item
            android:id="@+id/nav_item_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_item_sign_out"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/menu_sign_out" />
    </group>
</menu>
