<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:fillViewport="false">

    <LinearLayout
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/camera_img"
                 />
        </LinearLayout>

        <EditText
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_user_name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"  />

        <EditText
            android:id="@+id/server"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_server"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_port"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"  />

        <!-- Login Button -->

        <!-- Link to Login Screen -->

        <Switch
            android:id="@+id/isSSL"
            android:layout_width="82dp"
            android:layout_height="42dp"
            android:text="SSL"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#151313"
            android:textColorLink="#131010"
            tools:checked="false" />

        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#151313"
            android:textColorLink="#131010"
            android:layoutDirection="rtl"
            android:text="Remember" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login" />

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/textView1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:background="#ff9703"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_register"
            android:textAllCaps="false"
            android:textColor="@color/btn_login"
            android:textSize="15dp"  />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/app_name" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/version" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>